Stub out cumulative performance lens

--- a/app/views/data_explorer/_lens_wizard.html.erb
+++ b/app/views/data_explorer/_lens_wizard.html.erb
@@ -14,7 +14,13 @@
         <p>Use time series data to analyze how your podcasts perform over time</p>
       </a>
     </li>
-    <li><a href=""></a></li>
+    <li>
+      <a href="/data-explorer?lens=cume">
+        Cumulative Performance
+
+        <p>Compare how episodes accumulate downloads to identify lifecycle patterns</p>
+      </a>
+    </li>
     <li><a href=""></a></li>
   </ul>
 </dialog>
