--- a/app/views/data_explorer/_lens_wizard.html.erb
+++ b/app/views/data_explorer/_lens_wizard.html.erb
@@ -21,6 +21,10 @@
         <p>Compare how episodes accumulate downloads to identify lifecycle patterns</p>
       </a>
     </li>
-    <li><a href=""></a></li>
+    <li>
+      Custom Report
+
+      <p>Create a table that includesexactly the data you need</p>
+    </li>
   </ul>
 </dialog>
